--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -11,8 +11,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="80dp"
-        android:scaleType="center"
+        android:layout_marginTop="50dp"
         android:layout_marginStart="25dp"
         android:layout_marginEnd="25dp"
         android:layout_width="match_parent"
@@ -48,14 +47,13 @@
         android:layout_marginTop="2dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:hint="Email"
+        app:placeholderText="example@mail.com"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/email_title">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/email"
-            app:placeholderText="example@mail.com"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="textEmailAddress"
@@ -76,7 +74,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
-        android:hint="Password"
+        app:placeholderText="Enter your password"
         app:layout_constraintEnd_toEndOf="@id/email_field"
         app:layout_constraintStart_toStartOf="@id/email_field"
         app:layout_constraintTop_toBottomOf="@id/password_title">
@@ -84,7 +82,6 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password"
             android:layout_width="match_parent"
-            app:placeholderText="Enter your password"
             android:layout_height="match_parent"
             android:inputType="textPassword"
             android:singleLine="true" />
@@ -98,6 +95,8 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:textSize="18sp"
         android:text="Log in"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/red"
         app:layout_constraintTop_toBottomOf="@id/password_field"
         app:layout_constraintStart_toStartOf="@id/password_field"
         app:layout_constraintEnd_toEndOf="@id/password_field"
