--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -158,11 +158,17 @@
         app:layout_constraintTop_toTopOf="@id/helper"
         android:textStyle="bold"
         android:text="Log In"/>
-    <ImageView
+    <ProgressBar
         android:id="@+id/loading"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/loading_animation"
-        android:visibility="gone"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"
+        android:indeterminate="true"
+     />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
