--- a/app/src/main/res/drawable/offer_border.xml
+++ b/app/src/main/res/drawable/offer_border.xml
@@ -3,8 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <corners android:radius="15dp"
         />
-    <stroke android:color="@color/light_red"
-        android:width="3dp"/>
-<!--<solid-->
-<!--    android:color="#FAAC39"/>-->
+    <solid
+        android:color="@color/light_red"/>
 </shape>
