--- a/app/src/main/res/layout/fragment_restaurants.xml
+++ b/app/src/main/res/layout/fragment_restaurants.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="#F4F4F4"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -53,7 +54,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-
+                android:padding="12dp"
                 app:listData="@{restaurantsViewModel.restaurantUi.restaurantsItemList}"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 android:layout_width="match_parent"
