--- a/app/src/main/res/layout/restaurant_item.xml
+++ b/app/src/main/res/layout/restaurant_item.xml
@@ -14,8 +14,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
+        android:padding="12dp"
         app:cardCornerRadius="5dp"
-        app:cardElevation="2dp"
+        app:cardElevation="3dp"
         app:cardUseCompatPadding="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -25,29 +26,34 @@
 
             <ImageView
                 android:id="@+id/restaurant_image"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:layout_margin="15dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                tools:background="@drawable/image_border"
                 app:poster="@{restaurant.image}"/>
 
             <TextView
                 android:id="@+id/offer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:background="@color/light_red"
-                android:paddingStart="30dp"
+                android:background="@drawable/offer_border"
+                android:paddingStart="27dp"
+                android:paddingEnd="5dp"
+                android:textColor="@color/white"
+                android:layout_marginStart="3dp"
                 android:layout_marginBottom="5dp"
+                android:text="9.0 SAR Delivery"
                 tools:text="the resturant had offer"
-                app:layout_constraintBottom_toBottomOf="@id/restaurant_image"
-                app:layout_constraintStart_toStartOf="@id/restaurant_image" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/restaurant_image"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <ImageView
                 android:id="@+id/offer_icon"
                 android:layout_width="wrap_content"
+                android:layout_marginStart="-4dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="@id/offer"
                 app:layout_constraintStart_toStartOf="@id/offer"
@@ -60,7 +66,9 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="@id/restaurant_image"
                 app:layout_constraintStart_toEndOf="@id/restaurant_image"
+                app:layout_constraintBottom_toBottomOf="@id/restaurant_image"
                 android:layout_marginStart="15dp"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                 tools:text="Kudu"
                 android:text="@{restaurant.name}"/>
 
@@ -72,15 +80,18 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/ic_distance"
                 android:layout_marginEnd="15dp"
+                android:text="@{restaurant.distance}"
                 tools:text="2.9M" />
 
             <ImageView
                 android:id="@+id/ic_distance"
                 app:layout_constraintEnd_toStartOf="@id/distance"
-                app:layout_constraintBottom_toBottomOf="@id/restaurant_image"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="8dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_location" />
+                android:src="@drawable/ic_location"
+                />
 
             <TextView
                 android:id="@+id/rate"
@@ -90,15 +101,17 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="@id/ic_rate"
                 android:layout_marginEnd="15dp"
+                android:text="@{restaurant.rate}"
                 tools:text="4.5" />
 
             <ImageView
                 android:id="@+id/ic_rate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="@id/restaurant_image"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/rate"
                 app:layout_constraintBottom_toBottomOf="@id/rate"
+                android:layout_marginTop="8dp"
                 android:src="@drawable/ic_rate" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
