--- a/app/src/main/res/layout/fragment_restaurants.xml
+++ b/app/src/main/res/layout/fragment_restaurants.xml
@@ -47,10 +47,27 @@
 <!--            android:scrollbars="vertical"-->
 <!--            app:listData="@{restaurantsViewModel.restaurantUi.restaurantsItemList}" />-->
 
-
+        <ImageButton
+            android:id="@+id/filter"
+            app:layout_constraintTop_toTopOf="parent"
+app:layout_constraintEnd_toEndOf="parent"
+            android:backgroundTint="#00FFFFFF"
+            android:src="@drawable/ic_filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <ImageButton
+            android:id="@+id/sort"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/filter"
+            android:backgroundTint="#00FFFFFF"
+            android:src="@drawable/ic_sort"
+            android:clickable="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view"
-                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@id/filter"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
