--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="light_red">#D6473D</color>
     <color name="red">#C12519</color>
+    <color name="yellow">#D8A200</color>
 </resources>
