--- a/app/src/main/res/menu/sort_menu.xml
+++ b/app/src/main/res/menu/sort_menu.xml
@@ -2,15 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/sort_by_rate"
-        android:title="Rating"
+        android:title="@string/Rating"
         />
     <item
         android:id="@+id/sort_by_distance"
-        android:title="Nearest"
+        android:title="@string/nearest"
         />
     <item
         android:id="@+id/reset"
-        android:title="Reset"
+        android:title="@string/reset"
         />
 
 </menu>
