--- a/app/src/main/res/layout/fragment_restaurants.xml
+++ b/app/src/main/res/layout/fragment_restaurants.xml
@@ -89,7 +89,7 @@ app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:padding="12dp"
-                app:listData="@{restaurantsViewModel.restaurantUi.restaurantsItemList}"
+                app:listData="@{restaurantsViewModel.restaurantUi}"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
